WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203103
DatabaseContext should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203103
Summary
DatabaseContext should not prevent entering the back/forward cache
Chris Dumez
Reported
2019-10-17 09:56:10 PDT
DatabaseContext should not prevent entering the back/forward cache.
Attachments
Patch
(15.13 KB, patch)
2019-10-24 13:36 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(15.37 KB, patch)
2019-10-27 16:34 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(18.11 KB, patch)
2019-10-28 12:33 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-24 13:34:20 PDT
<
rdar://problem/56592193
>
Chris Dumez
Comment 2
2019-10-24 13:35:56 PDT
***
Bug 159379
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 3
2019-10-24 13:36:07 PDT
Created
attachment 381841
[details]
Patch
Geoffrey Garen
Comment 4
2019-10-24 21:28:49 PDT
Comment on
attachment 381841
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2019-10-24 22:36:09 PDT
The commit-queue encountered the following flaky tests while processing
attachment 381841
[details]
: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2019-10-24 22:36:26 PDT
The commit-queue encountered the following flaky tests while processing
attachment 381841
[details]
: imported/w3c/web-platform-tests/svg/text/visualtests/text-inline-size-003-visual.svg
bug 203172
(author:
sabouhallawa@apple.com
) fast/history/page-cache-webdatabase-pending-transaction.html
bug 203399
(author:
cdumez@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2019-10-25 01:14:31 PDT
Comment on
attachment 381841
[details]
Patch Clearing flags on attachment: 381841 Committed
r251586
: <
https://trac.webkit.org/changeset/251586
>
WebKit Commit Bot
Comment 8
2019-10-25 01:14:33 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 9
2019-10-25 08:44:26 PDT
Reverted
r251586
for reason: New test is flaky Committed
r251592
: <
https://trac.webkit.org/changeset/251592
>
Chris Dumez
Comment 10
2019-10-25 09:11:41 PDT
Looks like queueing JS callbacks in not sufficient because Database threads currently get terminated on navigation and may therefore not have time to schedule their callbacks: 1 0x7243d44e1 WTF::MessageQueue<WebCore::DatabaseTask>::kill() 2 0x7243d0ac4 WebCore::DatabaseThread::requestTermination(WebCore::DatabaseTaskSynchronizer*) 3 0x7243d0988 WebCore::DatabaseContext::stopDatabases(WebCore::DatabaseTaskSynchronizer*) 4 0x7243d2be3 WebCore::DatabaseManager::stopDatabases(WebCore::Document&, WebCore::DatabaseTaskSynchronizer*) 5 0x7256d2e39 WebCore::FrameLoader::stopLoading(WebCore::UnloadEventPolicy)
Chris Dumez
Comment 11
2019-10-27 16:34:58 PDT
Created
attachment 382042
[details]
Patch
Chris Dumez
Comment 12
2019-10-28 12:33:58 PDT
Created
attachment 382095
[details]
Patch
Chris Dumez
Comment 13
2019-10-30 15:50:37 PDT
ping review?
Chris Dumez
Comment 14
2019-11-04 12:53:47 PST
ping review?
Geoffrey Garen
Comment 15
2019-11-05 10:46:05 PST
Comment on
attachment 382095
[details]
Patch r=me Pretty sure WebDatabase is fully disabled these days, so I guess this is an example of why it would be good to remove the code entirely soon.
WebKit Commit Bot
Comment 16
2019-11-05 11:15:25 PST
Comment on
attachment 382095
[details]
Patch Clearing flags on attachment: 382095 Committed
r252064
: <
https://trac.webkit.org/changeset/252064
>
WebKit Commit Bot
Comment 17
2019-11-05 11:15:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug