DatabaseContext should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203103

Reviewed by Geoffrey Garen.

Source/WebCore:

Let pages with active webdatabase transactions into the back/forward cache. We make sure
to queue tasks that run script to the Window event loop, so that they get delayed when
the document is suspended.

No new tests, updated existing test.

* Modules/webdatabase/Database.cpp:
(WebCore::Database::runTransaction):
* Modules/webdatabase/DatabaseContext.cpp:
(WebCore::DatabaseContext::shouldPreventEnteringBackForwardCache_DEPRECATED const): Deleted.
* Modules/webdatabase/DatabaseContext.h:
* Modules/webdatabase/DatabaseManager.cpp:
(WebCore::DatabaseManager::openDatabase):
* Modules/webdatabase/SQLTransaction.cpp:
(WebCore::SQLTransaction::performPendingCallback):

LayoutTests:

* fast/history/page-cache-webdatabase-pending-transaction-expected.txt:
* fast/history/page-cache-webdatabase-pending-transaction.html:
Update existing test to reflect behavior change.

* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
Unmark test as flaky.


Canonical link: https://commits.webkit.org/216813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251586 268f45cc-cd09-0410-ab3c-d52691b4dbfc